syntax = "proto3";

message MyRequest {
  oneof arg {
    int64  int64_value  = 1;
    string string_value = 2;
    bool   bool_value   = 3;
  }
}

message MyReply {
  oneof result {
    int64  int64_result  = 1;
    string string_result = 2;
  }
}

service TestService {
  rpc EchoOneOf(MyRequest) returns (MyReply);
}
